# backend/routes/users.js
@@ -1,10 +1,11 @@
 const express = require("express");
-const { getUsers, createUser, updateUser, deleteUser } = require("../controllers/userController");
+const { getUsers, createUser, updateUser, deleteUser, getUserById } = require("../controllers/userController");
 const router = express.Router();
 
 router.get("/", getUsers);
 router.post("/", createUser);
+router.get("/:ID", getUserById);
 router.put("/:ID", updateUser);
-router.delete("/:ID", deleteUser); 
+router.delete("/:ID", deleteUser);
 
 module.exports = router;
